<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".EditorAct">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/productname_text" />

            <EditText
                android:id="@+id/edit_prod_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_price" />

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/prodprice"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/quantitystyle"
                android:text="@string/quantitytext"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                />


            <Button
                android:id="@+id/increase_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+" />

            <EditText
                android:id="@+id/quantity_edit"
                android:layout_width="0dp"
                android:hint="0"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/decrease_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_code" />

            <EditText
                android:id="@+id/editproduct_code"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_productcode"
                android:inputType="date" />
        </LinearLayout>

        <Button
            android:id="@+id/image_button"
            style="@style/buttonStyle"
            android:layout_marginTop="16dp"
            android:text="add Image" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/container_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/save_button"
                style="@style/buttonStyle"
                android:layout_weight="1"
                android:text="@string/SaveData" />

            <Button
                android:id="@+id/delete_button"
                style="@style/buttonStyle"
                android:layout_weight="1"
                android:text="@string/deletedata" />

            <Button
                android:id="@+id/order_button"
                style="@style/buttonStyle"
                android:layout_weight="1"
                android:text="@string/submitorder"/>


        </LinearLayout>
    </LinearLayout>
</ScrollView>